k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vizcore
  labels:
    name: vizcore
    app: vizcore
