k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizcore-service
  labels:
    app: vizcore
    component: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: vizcore
    component: app

---
apiVersion: v1
kind: Service
metadata:
  name: vizcore-nodeport
  labels:
    app: vizcore
    component: app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: vizcore
    component: app
